<resources>
    <string name="app_name">Android Assignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">I\'m a button</string>
    <string name="radio_button">RadioButton</string>
    <string name="checkbox_text">CheckBox</string>
    <string name="login">Login</string>
    <string name="login_name">login name</string>
    <string name="password">Password</string>
    <string name="switch_name">What does this do?</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish The Activity</string>
    <string name="okButton">Ok</string>
    <string name="cancelButton">Cancel</string>
    <string name="my_information"> My information to share</string>
    <string name="start_chat">Start Chat</string>
    <string name="sendText">Send</string>
    <string name="testToolbar">Test Toolbar</string>
    <string name="title_activity_test_toolbar">Test Toolbar</string>
    <string name="back">Do you want to go back?</string>
    <string name="newMessage">New message</string>
    <string name="weather">Weather</string>
    <string name="delete_message">Delete this Message</string>

</resources>