<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="48dp"
        android:text="@string/button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/button2"
        android:layout_width="136dp"
        android:layout_height="61dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="138dp"
        android:layout_marginBottom="221dp"
        android:text="@string/start_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/test_toolbar"
        android:layout_width="136dp"
        android:layout_height="61dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="138dp"
        android:text="@string/testToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/weather_launch"
        android:layout_width="136dp"
        android:layout_height="61dp"
        android:layout_marginStart="137dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="138dp"
        android:text="@string/weather"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/test_toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>